<resources>
    <string name="app_name">Contacts App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Contacts App</string>
    <string name="nav_header_subtitle">Turkcell Contacts Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_family">Family</string>
    <string name="menu_friend">Friends</string>
    <string name="menu_school">School</string>
    <string name="menu_turkcell">Turkcell GYGY</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="name">First Name</string>
    <string name="add_contact">Add Contact</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="detail">Detail</string>

</resources>